@@ -43,7 +43,12 @@ def handle(name,cfg,cloud,log,args):
                'AWS_SECRET_ACCESS_KEY': dns_cfg['route53']['aws_secret_access_key']}
         ttl = '%s' %dns_cfg['route53']['ttl']
         hostname = cloud.datasource.get_public_hostname()
-        subprocess.Popen(['/usr/bin/cli53', 'rrcreate', 
-                          domain, host, 'CNAME', hostname, '--ttl', ttl, '--replace'], env=env).communicate()
+        ptr = local_ipv4.split('.')
+        ptr.reverse()
+        ptr = '.'.join(ptr)+'.'
+        subprocess.Popen(['/usr/bin/cli53', 'rrcreate', domain, host, 
+                          'CNAME', hostname, '--ttl', ttl, '--replace'], env=env).communicate()
+        subprocess.Popen(['/usr/bin/cli53', 'rrcreate', '10.in-addr.arpa', ptr, 
+                          'PTR', '%s.%s.' %(host, domain), '--ttl', ttl, '--replace'], env=env).communicate()
+        
         log.debug("updated Route53 hostname %s", hostname)
-
