@@ -1,6 +1,6 @@
 CONFIG_DNS=yes
 CONFIG_SSH=yes
-CONFIG_MOUNTS=yes
+CONFIG_MOUNTS=no
 PACKAGE_SETUP=yes
 RUNCMD=yes
 PUPPET=yes
